[project]
name = "rescue-quick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-browser-reload>=1.18.0",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.11.5",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# Temporarily ignore unused imports until everything is setup
ignore = ["F401"]

[tool.djlint]
ignore="H006"
