[project]
name = "rescue-quick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-storages[s3]>=1.14.6",
    "django-stubs>=5.2.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sahi>=0.11.22",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "ultralytics>=8.3.121",
    "uvicorn>=0.34.2",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.11.5",
    "django-browser-reload>=1.18.0",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# Temporarily ignore unused imports until everything is setup
ignore = ["F401"]

[tool.djlint]
ignore="H006"
